Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90448

tst_qmllint and tst_qquickloader failing on dev

XMLWordPrintable

    • 3ae2a6a47c960d159e1110b434795fc69ecf3d80 (qt/qtdeclarative/dev)

      https://codereview.qt-project.org/c/qt/qtdeclarative/+/327171 got merged while tests weren't running properly.

      This now blocks integrations in dev.

        For Gerrit Dashboard: QTBUG-90448
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            fabiankosmale Fabian Kosmale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes